--- a/feeds.org
+++ b/feeds.org
@@ -9,11 +9,20 @@
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCSiYkMylC3F_eQfIodMHkOw][Maximilien Robespierre]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCvixJtaXuNdMPUGdOPcY8Ag][David Pakman]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC5dUUCs748wCYQl682LX6bg][Farron Balanced]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCYWIEbibRcZav6xMLo9qWWw][Ring of Fire]]
 *** [[https://www.youtube.com/feeds/videos.xml?playlist_id=PLJaq64dKJZoqsh7PGGUi-SARV4wUz_lVa][A Closer Look]]
 ** tech :tech:youtube:
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCxwcmRAmBRzZMNS37dCgmHA][RoboNuggie]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCIFzjAer2W9gTWVECZgtDzg][Gary H Tech]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC1s1OsWNYDFgbROPV-q5arg][Michael Horn]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC5UAwBUum7CPN5buc-_N1Fw][The Linux Experiment]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCjSEJkpGbcZhvo0lr-44X_w][TechHut]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCf93fPKwotph47H3_KDcRyg][Kris Occhipinti]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC05XpvbHZUQOfA6xk4dlmcw][DJ Ware]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCEJEoY7bHQossChK6O-M2Gw][Techiechap]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCkf4VIqu3Acnfzuk3kRIFwA][gotbletu]]
+** freebsd :freebsd:
+*** [[https://forums.freebsd.org/forums/-/index.rss][freebsd forum]]
 ** emacs :emacs:youtube:
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCAiiOTio8Yu69c3XnR7nQBQ][System Crafters]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCxkMDXQ5qzYOgXPRnOBrp1w][Mike Zamansky]]
@@ -21,5 +30,3 @@
 ** reddit :reddit:
 *** [[https://www.reddit.com/r/emacs/new.rss][Emacs]]
 *** [[https://www.reddit.com/r/freebsd/new.rss][Freebsd]]
-*** [[https://www.reddit.com/r/firefox/new.rss][Firefox]]
-*** [[https://www.reddit.com/r/torrents/new.rss][Torrents]]
