--- a/feeds.org
+++ b/feeds.org
@@ -4,16 +4,7 @@
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCzbwOixfdDkOEl4c2Gy1Xow][The Magpie Channel]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC2WTz3aJZ65nN3p5_LMJAzg][Roobenstien]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCbXlSJHSuY1nNHoxSElKiIA][Adam Pearson]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCTgqjuKeW7FW-fpIfi-yodg][Toon Review]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCuzpByt8uzhXLqXgLEAznnw][Geordie Josh]]
+*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCgGi7lDaw7a5AyDb9BW6EoQ][Everything Is Black & White]]
 *** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCywGl_BPp9QhD0uAcP2HsJw][Newcastle United]]
-** general :general:youtube:
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC5dUUCs748wCYQl682LX6bg][Farron Balanced]]
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCYWIEbibRcZav6xMLo9qWWw][Ring of Fire]]
-*** [[https://www.youtube.com/feeds/videos.xml?playlist_id=PLJaq64dKJZoqsh7PGGUi-SARV4wUz_lVa][A Closer Look]]
-** tech :tech:youtube:
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC1s1OsWNYDFgbROPV-q5arg][Michael Horn]]
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UC5UAwBUum7CPN5buc-_N1Fw][The Linux Experiment]]
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCjSEJkpGbcZhvo0lr-44X_w][TechHut]]
-** emacs :emacs:youtube:
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=ucaiiotio8yu69c3xnr7nqbq][System Crafters]]
-*** [[https://www.youtube.com/feeds/videos.xml?channel_id=UCxkMDXQ5qzYOgXPRnOBrp1w][Mike Zamansky]]
-*** [[https://www.youtube.com/feeds/videos.xml?playlist_id=PL8Bwba5vnQK14z96Gil86pLMDO2GnOhQ6][Protesilaos Stavrou]]
